--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
                 <div class="certification-card">
                     <div class="certification-image">
-                        <img src="images/ibm-devops.jpg" alt="IBM DevOps Certification" class="certification-img">
+                        <img src="images/devops.png" alt="IBM DevOps Certification" class="certification-img">
                     </div>
                     <h3>DevOps and Software Engineering</h3>
                     <p class="certification-issuer">IBM - Coursera</p>
@@ -309,7 +309,7 @@
 
                 <div class="certification-card">
                     <div class="certification-image">
-                        <img src="images/ibm-data.jpg" alt="IBM Data Analyst Certification" class="certification-img">
+                        <img src="images/data.png" alt="IBM Data Analyst Certification" class="certification-img">
                     </div>
                     <h3>Data Analyst Professional</h3>
                     <p class="certification-issuer">IBM - Coursera</p>
@@ -323,7 +323,7 @@
 
                 <div class="certification-card">
                     <div class="certification-image">
-                        <img src="images/python-bootcamp.jpg" alt="Python Bootcamp Certification" class="certification-img">
+                        <img src="images/python.png" alt="Python Bootcamp Certification" class="certification-img">
                     </div>
                     <h3>Complete Python Pro Bootcamp</h3>
                     <p class="certification-issuer">Dr. Angela Yu - Udemy</p>
@@ -337,7 +337,7 @@
 
                 <div class="certification-card">
                     <div class="certification-image">
-                        <img src="images/cloud-computing.jpg" alt="Cloud Computing Certification" class="certification-img">
+                        <img src="images/nptel.png" alt="Cloud Computing Certification" class="certification-img">
                     </div>
                     <h3>Cloud Computing</h3>
                     <p class="certification-issuer">NPTEL</p>
