change in about me

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
                 <h2 style="margin-bottom: 2rem;">About Me</h2>
                 <div class="about-text" style="max-width: 800px; margin: 0 auto;">
                     <p>
-                        A passionate Software Developer with expertise in multiple programming languages and data science.
-                        Currently pursuing B.Tech in Computer Science at Lovely Professional University.
-                        Strong problem-solving skills demonstrated through 150+ LeetCode solutions and competitive programming achievements.
+                        I am a Computer Science and Engineering student at Lovely Professional University, passionate about technology and problem-solving. Skilled in C++, Python, and data science, I have completed multiple projects and certifications. I am dedicated to continuous learning, adapting to new challenges, and building innovative, real-world solutions through a strong foundation in programming and analytics.
                     </p>
                     <div class="about-details" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem; margin-top: 3rem;">
                         <div class="about-column">
